--- a/.gitignore
+++ b/.gitignore
@@ -179,11 +179,16 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+
+
 # PyCharm
 #  JetBrains specific template is maintainted in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
+cmake*/
+
+
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos
